thymeleaf,pojo,addAtributes

--- a/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/grades.html
+++ b/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/grades.html
@@ -115,6 +115,18 @@
           <th>Subject</th>
           <th>Score</th>
         </tr>
+        <tr>
+          <td th:text="${grade.name}"></td>
+          <td th:text="${grade.subject}"></td>
+          <td th:text="${grade.score}"></td>
+        </tr>
+
+        <tr>
+          <td th:text="${hermioneGrade.name}"></td>
+          <td th:text="${hermioneGrade.subject}"></td>
+          <td th:text="${hermioneGrade.score}"></td>
+      </tr>
+       
       </table>
     </div>
     
