--- a/SpringBoot/02. model-view-controller/workbook 2.2/starter/workbook/src/main/resources/templates/shows.html
+++ b/SpringBoot/02. model-view-controller/workbook 2.2/starter/workbook/src/main/resources/templates/shows.html
@@ -11,30 +11,30 @@
             <th>Episode</th>
             <th>Rating</th>
           </tr>
-          <tr>
-            <td>Breaking Bad</td>
-            <td>Ozymandias</td>
-            <td>10.0</td>
+          <tr th:object="${first}">
+            <td th:text="*{title}">Breaking Bad</td>
+            <td th:text="*{episode}">Ozymandias</td>
+            <td th:text="*{rating}">10.0</td>
           </tr>
-          <tr>
-            <td>Attack on Titan</td>
-            <td>Hero</td>
-            <td>9.9</td>
+          <tr th:object="${second}">
+            <td th:text="*{title}">Breaking Bad</td>
+            <td th:text="*{episode}">Ozymandias</td>
+            <td th:text="*{rating}">10.0</td>
           </tr>
-          <tr>
-            <td>Attack on Titan</td>
-            <td>Perfect Game</td>
-            <td>9.9</td>
+          <tr th:object="${third}">
+            <td th:text="*{title}">Breaking Bad</td>
+            <td th:text="*{episode}">Ozymandias</td>
+            <td th:text="*{rating}">10.0</td>
           </tr>
-          <tr>
-            <td>Star Wars: The Clone Wars</td>
-            <td>Victory and Death</td>
-            <td>9.9</td>
+          <tr th:object="${fourth}">
+            <td th:text="*{title}">Breaking Bad</td>
+            <td th:text="*{episode}">Ozymandias</td>
+            <td th:text="*{rating}">10.0</td>
           </tr>
-          <tr>
-            <td>Mr. Robot</td>
-            <td>407 Proxy Authentication Required</td>
-            <td>9.9</td>
+          <tr th:object="${fifth}">
+            <td th:text="*{title}">Breaking Bad</td>
+            <td th:text="*{episode}">Ozymandias</td>
+            <td th:text="*{rating}">10.0</td>
           </tr>
         </table>        
     </body>
