--- a/SpringBoot/02. model-view-controller/conditionals/starter/conditionals/src/main/resources/templates/conditionals.html
+++ b/SpringBoot/02. model-view-controller/conditionals/starter/conditionals/src/main/resources/templates/conditionals.html
@@ -4,6 +4,15 @@
         <title>Conditionals</title>
     </head>
     <body>
+        <p th:text="${sales >50} ? ' Sales were good' : 
+            'Sales were bad'"></p>
+        <div th:switch="${product}">
+            <p th:case="'chair'">50</p>
+            <p th:case="'tv'">150</p>
+            <p th:case="*">no match</p>
+        
+            
+        </div>
                 
     </body>
 </html>
