--- a/SpringBoot/02. model-view-controller/utility-methods/starter/utility-methods/src/main/resources/templates/view.html
+++ b/SpringBoot/02. model-view-controller/utility-methods/starter/utility-methods/src/main/resources/templates/view.html
@@ -5,6 +5,7 @@
         <title>Utility Methods</title>
     </head>
     <body>
-        <h1></h1>  
+        <h1 th:text="${#strings.contains(menu, 'rice cakes')}
+        ? 'We have this item' : ' We do not have this item'"></h1>  
     </body>
 </html>
