--- a/SpringBoot/02. model-view-controller/workbook 2.8/starter/workbook/src/main/resources/templates/page.html
+++ b/SpringBoot/02. model-view-controller/workbook 2.8/starter/workbook/src/main/resources/templates/page.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Page</title>
+        <link th:href ="@{stylesheet.css}" rel ="stylesheet">
     </head>
     <body>
-        <div>
+        <div class="container">
             <h1>Learn the Part</h1>
             <p>The Complete Spring Boot Development Bootcamp</p>
         </div>
