--- a/SpringBoot/02. model-view-controller/workbook 2.9/starter/workbook/src/main/resources/templates/away.html
+++ b/SpringBoot/02. model-view-controller/workbook 2.9/starter/workbook/src/main/resources/templates/away.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <title>Tabs</title>
+        <link th:href="@{/stylesheet.css}" rel="stylesheet">
     </head>
     <body>
-        <div>
-            <a>Home</a>
-            <a>Away</a>
+        <div class="topnav">
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/away}" class="active">Away</a>
         </div>
-          <div>
+          <div class="container">
             <h1>AWAY</h1>
         </div>
     </body>
