--- a/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/grades.html
+++ b/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/grades.html
@@ -23,6 +23,8 @@
           <td th:text="${grade.name}"></td>
           <td th:text="${grade.subject}"></td>
           <td th:text="${grade.score}"></td>
+          <td> <a role="button" class="update"
+            th:href="@{/(name=${grade.name})}">Update</a></td>
         </tr>
 
         
