--- a/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/inventory.html
+++ b/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/inventory.html
@@ -18,12 +18,12 @@
                  <th>Order Date</th>
                  <th> </th>
               </tr>
-              <tr>
-                 <td >Furniture</th>
-                 <td >Table</td>
-                 <td type="currency" >2342.34</td>
-                 <td type="currency">1657.23</td>
-                 <td type="date">1996-02-02</td>
+              <tr th:each="item: ${items}">
+                 <td th:text="${item.category}">Furniture</th>
+                 <td th:text="${item.name}">Table</td>
+                 <td type="currency" th:text="${item.price}">2342.34</td>
+                 <td type="currency" th:text="${item.discount}">1657.23</td>
+                 <td type="date" th:text="${item.date}">1996-02-02</td>
                  <td>
                     <a role="button" style="color:white; background-color: #263238" class="table-button">Update</a>
                  </td>
