--- a/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/form.html
+++ b/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/form.html
@@ -7,8 +7,8 @@
   </head>    
   <body>
     <div class="topnav">
-      <a>Form</a>
-      <a>Grades</a>
+      <a th:href="@{/}">Form</a>
+      <a th:href="@{/grades}">Grades</a>
     </div>   
     <div class="container">
       <h2> Grade Portal </h2>
@@ -16,6 +16,8 @@
         <input type="text" placeholder="Name" th:field="*{name}">
         <input type="text" placeholder="Score" th:field="*{score}">  
         <input type="text" placeholder="Subject" th:field="*{subject}">
+        <input type="hidden" th:field="*{id}">
+
         <br><br>
         <input type="submit" value="Submit">
       </form>  
