--- a/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/grades.html
+++ b/SpringBoot/02. model-view-controller/grade-submission/starter/grade-submission/src/main/resources/templates/grades.html
@@ -7,8 +7,8 @@
   <body>
 
     <div class="topnav">
-      <a>Form</a>
-      <a>Grades</a>
+      <a th:href="@{/}">Form</a>
+      <a th:href="@{/grades}">Grades</a>
     </div>
 
     <div class= "container">
@@ -24,7 +24,7 @@
           <td th:text="${grade.subject}"></td>
           <td th:text="${grade.score}"></td>
           <td> <a role="button" class="update"
-            th:href="@{/(name=${grade.name})}">Update</a></td>
+            th:href="@{/(id=${grade.id})}">Update</a></td>
         </tr>
 
         
