Something wrong i can feel it

--- a/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/form.html
+++ b/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/form.html
@@ -19,6 +19,7 @@
                 <input class="half" type="text" placeholder="Discount" th:field="*{price}">
                 <h4>Order Date</h4>
                 <input type="date" style="color:black">
+                <input type="hidden" th:field="*{id}">
                 <input type="submit" value="Submit Item">
             </form>
         </div>      
