--- a/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/inventory.html
+++ b/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/inventory.html
@@ -7,6 +7,15 @@
             <a  th:href="@{/}" >Form</a>
             <a class="active" th:href="@{/inventory}">Inventory</a>
         </div>
+
+        <div class="alert success" th:if="${status} == 'status'">
+         <strong> You successfully submited the item! </strong> 
+         </div> 
+
+         <div class="alert " th:if="${status} == 'failed'">
+            <strong> You failed submited the item! </strong> 
+         </div> 
+ 
    
         <div class="container">
            <table>
@@ -21,11 +30,11 @@
               <tr th:each="item: ${items}">
                  <td th:text="${item.category}">Furniture</th>
                  <td th:text="${item.name}">Table</td>
-                 <td type="currency" th:text="${item.price}">2342.34</td>
-                 <td type="currency" th:text="${item.discount}">1657.23</td>
-                 <td type="date" th:text="${item.date}">1996-02-02</td>
+                 <td th:text="${#numbers.formatCurrency(item.price)}" >2342.34</td>
+                 <td th:text="${#numbers.formatCurrency(item.discount)}">1657.23</td>
+                 <td type="date" th:text="${#dates.format(item.date, 'yyyy-MM-dd')}">1996-02-02</td>
                  <td>
-                    <a role="button" style="color:white; background-color: #263238" class="table-button">Update</a>
+                    <a role="button" style="color:white; background-color: #263238" class="table-button" th:href="@{/(id = ${item.id})}">Update</a>
                  </td>
               </tr>
            </table>
