--- a/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/form.html
+++ b/SpringBoot/02. model-view-controller/global-superstore/starter/global-superstore/src/main/resources/templates/form.html
@@ -4,7 +4,7 @@
     </head>    
     <body>
         <div class="topnav">
-            <a class="active" th:href="@{/}">Form</a>
+            <a class="active" th:href="@{/}" >Form</a>
             <a th:href="@{/inventory}">Inventory</a>
         </div>
         <div class="container">    
@@ -16,9 +16,9 @@
                 </select>
                 <input type="text" placeholder="Name" th:field="*{name}">
                 <input class="half" type="text" placeholder="Price" th:field="*{price}">
-                <input class="half" type="text" placeholder="Discount" th:field="*{price}">
+                <input class="half" type="text" placeholder="Discount" th:field="*{discount}">
                 <h4>Order Date</h4>
-                <input type="date" style="color:black">
+                <input type="date" style="color:black" th:field="*{date}">
                 <input type="hidden" th:field="*{id}">
                 <input type="submit" value="Submit Item">
             </form>
