--- a/SpringBoot/03. field-validation/grade-submission/starter/grade-submission/src/main/resources/templates/form.html
+++ b/SpringBoot/03. field-validation/grade-submission/starter/grade-submission/src/main/resources/templates/form.html
@@ -14,6 +14,7 @@
       <form method="post" th:object="${grade}" th:action="@{/handleSubmit}"> 
        <p style ="color:red" th:errors="*{name}"> </p>
         <input type="text" placeholder="Name" th:field="*{name}">
+        <p style ="color:red" th:errors="*{score}"> </p>
         <input type="text" placeholder="Score" th:field="*{score}">  
         <input type="text" placeholder="Subject" th:field="*{subject}">
         <p style ="color:red" th:errors="*{subject}"> </p>
