--- a/SpringBoot/calculator/src/main/resources/templates/base-layout.html
+++ b/SpringBoot/calculator/src/main/resources/templates/base-layout.html
@@ -30,7 +30,7 @@
 </body>
 <footer>
     <div class="container modal-footer">
-        <p> @Shubham Sawant </p>
+        <p> @Petar Matic </p>
     </div>
 </footer>
 </html>
