--- a/SpringBoot/WebShop/src/main/resources/templates/jackets.html
+++ b/SpringBoot/WebShop/src/main/resources/templates/jackets.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackets</title>
-    <link th:href="@{/css/jackets.css}" rel="stylesheet">
+    <link th:href="@{/jackets.css}" rel="stylesheet">
 </head>
 <body>
     <div class="topnav">
         <a th:href="@{/jackets}">Jackets</a>
-    </div>
+      </div>   
     <div class="table-container">
         <div class="table-title">Jackets</div>
         <table>
