--- a/SpringBoot/WebShop/src/main/resources/templates/jackets.html
+++ b/SpringBoot/WebShop/src/main/resources/templates/jackets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackets</title>
-    <link rel="stylesheet" type="text/css" href="/css/jackets.css">
+    <link th:href="@{/css/jackets.css}" rel="stylesheet">
 </head>
 <body>
     <div class="table-container">
